--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,8 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  font-family: "Inter", sans-serif;
+  max-height: 100vh;
 }
 
 .color {
@@ -16,17 +18,67 @@ body {
   width: 100%;
 }
 
-.background-color {
+.color-background {
   min-width: 110px;
   height: 100vh;
   padding: 51px;
 }
 
 .main-section {
-  border: 2px solid green;
   display: flex;
 }
 
-.color-info {
+.color-details {
   text-align: center;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  color: #2b283a;
+}
+
+/* Header Section */
+.header-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 14px;
+  gap: 13px;
+}
+
+.seed-color {
+  width: 51px;
+  cursor: pointer;
+  height: 34px;
+}
+
+.color-scheme {
+  width: 312px;
+  background: #ffffff;
+  border: 1px solid #d1d5db;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 9px;
+}
+
+.get-color-scheme-btn {
+  background: #ffffff;
+
+  border: 1px solid #d1d5db;
+
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+
+  cursor: pointer;
+
+  color: #374151;
+  padding: 13px 11px;
 }
