--- a/css/index.css
+++ b/css/index.css
@@ -7,78 +7,139 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  font-family: "Inter", sans-serif;
-  max-height: 100vh;
+  font-family: "Inter";
 }
 
-.color {
-  display: flex;
-  margin-bottom: 13px;
-  flex-direction: column;
-  width: 100%;
-}
+/* ================
+    HEADER SECTION
+   ================ */
 
-.color-background {
-  min-width: 110px;
-  height: 100vh;
-  padding: 51px;
-}
-
-.main-section {
-  display: flex;
-}
-
-.color-details {
-  text-align: center;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 24px;
-  color: #2b283a;
-}
-
-/* Header Section */
 .header-section {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  gap: 9px;
   padding: 25px 14px;
-  gap: 13px;
+}
+
+.seed-color,
+.color-scheme,
+.get-color-scheme-btn {
+  cursor: pointer;
 }
 
 .seed-color {
-  width: 51px;
-  cursor: pointer;
+  min-width: 51px;
   height: 34px;
 }
 
 .color-scheme {
-  width: 312px;
+  width: 252px;
   background: #ffffff;
   border: 1px solid #d1d5db;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
-  font-family: "Inter";
-  font-style: normal;
   font-weight: 500;
-  cursor: pointer;
   padding: 9px;
 }
 
 .get-color-scheme-btn {
+  height: 34px;
   background: #ffffff;
-
   border: 1px solid #d1d5db;
-
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 4px;
-  font-family: "Inter";
-  font-style: normal;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  white-space: nowrap;
+  color: #374151;
+}
+
+/* ================
+    MAIN SECTION
+   ================ */
+
+.main-section {
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  height: 100vh;
+}
+
+.color {
+  display: flex;
+  width: 100%;
+}
+
+.color-background {
+  width: 80%;
+}
+
+.color-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-weight: 500;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 24px;
+  color: #2b283a;
+  margin: 0 auto;
+  white-space: nowrap;
+}
 
-  cursor: pointer;
+.color-details p {
+  margin: 0;
+}
 
-  color: #374151;
-  padding: 13px 11px;
+/* ================
+    MEDIA QUERIES
+   ================ */
+
+@media (max-width: 300px) {
+  .header-section {
+    display: grid;
+    grid-template: 0.25fr 1fr / 1fr 1fr;
+    gap: 9px;
+    align-items: center;
+  }
+
+  .seed-color {
+    width: 51px;
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  .color-scheme {
+    grid-area: 1 / 2/ 2/ 3;
+    width: 192px;
+  }
+
+  .get-color-scheme-btn {
+    grid-area: 2 / 1 / 3 / -1;
+  }
+
+  .color-background {
+    width: 65%;
+  }
+}
+
+@media (min-width: 600px) {
+  .main-section {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
+
+  .color {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .color-background {
+    height: 100vh;
+    width: 100%;
+  }
+
+  .color-details {
+    font-size: 17px;
+    margin: 43px;
+  }
 }
