--- a/css/index.css
+++ b/css/index.css
@@ -143,3 +143,14 @@ body {
     margin: 43px;
   }
 }
+
+/* ================
+    HOVER EFFECT
+   ================ */
+
+.color-hex:hover {
+  text-shadow: 1px -1px 2px red;
+  color: yellow;
+  cursor: pointer;
+  font-size: 21px;
+}
